Fixed some overflow problems with bootstrap-select.

--- a/assets/linker/styles/form.css
+++ b/assets/linker/styles/form.css
@@ -184,14 +184,18 @@ div[data-role="editor-toolbar"] {
     user-select: none;
 }
 
-.bootstrap-select.form-control {
+.bootstrap-select.form-control,
+.bootstrap-select.in-modal {
     width: 100%;
     padding: 0;
 }
 
-.bootstrap-select.form-control button {
-    padding: 0;
-    line-height: 30px;
+.bootstrap-select .dropdown-menu {
+    z-index: 3000;
+}
+
+.btn-group.bootstrap-select.form-control.in-modal .dropdown-menu {
+    top: -2px;
 }
 
 .bootstrap-select.btn-group.open .dropdown-toggle {
@@ -211,6 +215,8 @@ div[data-role="editor-toolbar"] {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
 }
 
 .bootstrap-select .btn:focus {
